# analysis

./: .gitignore  .gitmodules  README.md  activate_python_env.sh  averageRatio.py  create_python_env.sh  divideQuery.py  execute_jupyter.sh  generateDataset.py  generate_artefact.sh  makefile  metric.py  plotsVariation.py  pyproject.toml  requirements.txt  resultEvalVariationPercentageShapeIndex.py  resultLinerarityRHttpReqExecTime.py  resultQueryContainmentTable.py  resultRatioUsefulSources.py  resultTableStatisticalSignificance.py  resultVariationApproach.py  resultVariationApproachRaw.py  resultVariationPercentageEntry.py  resultVariationPercentageShapeIndex.py  resultVariationShapeDetail.py  resultVariationShapeIndexAll.py  template_table_ratio_useful_resources.tex  template_table_ratio_useful_resources_summary.tex  test.json
docs/: continuous_performance.html  dief_continuous_performance.html  query_shape_subsumption_execution_time.html  relation_number_http_req_exec_time.html  variation_approaches.html  variation_percentage_shape_index.html
html_notebook/: continuous_performance.html  dief_continuous_performance.html  index.html  query_shape_subsumption_execution_time.html  ratio_useful_sources.html  relation_number_http_req_exec_time.html  statistical_significance.html  variation_approaches.html  variation_approaches_net.html  variation_percentage_shape_index.html  variation_percentage_shape_index_entry.html  variation_shape_detail.html
notebooks/: _dief_continuous_performance.py  arrival_times.ipynb  arrival_times.py  continuous_performance.py  (+27 more)
(+77 files in other folders)
