[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bryan-Elliott Tam",email = "bryanelliott.tam@ugent.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "latextable (>=1.0.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "marimo (>=0.13.15,<0.15.0)",
    "diefpy (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
